force-app/main/default/objects/Land_Parcel_c__c/Land_Parcel_c__c.object-meta.xml
<CustomObject>
    <label>Land Parcel</label>
    <nameField>
        <label>Land_Parcel__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Land Parcel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>