force-app/main/default/objects/Land_Parcel_c__c/fields/Land_Parcel__c.field-meta.xml
<CustomField>
    <fullName>Land_Parcel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Parcel</label>
    <referenceTo>Land_Parcel_c__c</referenceTo>
    <relationshipLabel>Land Parcel</relationshipLabel>
    <relationshipName>Land_Parcel</relationshipName>
    <type>Lookup</type>
</CustomField>