force-app/main/default/objects/Land_Parcel_c__c/fields/Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Managed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed By</label>
    <referenceTo>Official__c</referenceTo>
    <relationshipLabel>Land Parcel</relationshipLabel>
    <relationshipName>Land_Parcel</relationshipName>
    <type>Lookup</type>
</CustomField>