force-app/main/default/objects/Land_Parcel_c__c/fields/Ownership_History__c.field-meta.xml
<CustomField>
    <fullName>Ownership_History__c</fullName>
    <label>Ownership History</label>
    <type>TextArea</type>
</CustomField>