force-app/main/default/objects/Land_Parcel_c__c/fields/Parcel_ID__c.field-meta.xml
<CustomField>
    <fullName>Parcel_ID__c</fullName>
    <displayFormat>PAR-{0000}</displayFormat>
    <label>Parcel ID</label>
    <type>AutoNumber</type>
</CustomField>