force-app/main/default/objects/Land_Parcel_c__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agri</fullName>
            </value>
            <value>
                <fullName>Res</fullName>
            </value>
            <value>
                <fullName>Comm</fullName>
            </value>
            <value>
                <fullName>Ind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>